[package]
name = "jsonpath_reference_implementation"
version = "0.0.1"
authors = ["Glyn Normington <glyn.normington@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.9.0"
json = "0.12.4"
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
slyce = "0.3.1"
